// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new activity button does not show when there is no new activity 1`] = `
<div>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    id="planner-today-btn"
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="light"
  >
    Today
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Add To Do
    </ScreenReaderContent>
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Show My Grades
    </ScreenReaderContent>
  </Button>
  <Popover
    alignArrow={false}
    constrain="none"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on="click"
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom end"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    show={false}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Button
        as="button"
        buttonRef={[Function]}
        fluidWidth={false}
        margin="0 medium 0 0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="icon"
      >
        <Badge
          count={1}
          elementRef={[Function]}
          formatOverflowText={[Function]}
          placement="top end"
          pulse={false}
          standalone={false}
          type="count"
          variant="primary"
        >
          <View
            display="auto"
          >
            <IconAlerts />
            <ScreenReaderContent
              as="span"
            >
              1 opportunity
            </ScreenReaderContent>
          </View>
        </Badge>
      </Button>
    </PopoverTrigger>
    <PopoverContent>
      <Animatable(Opportunities)
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        dismiss={[Function]}
        maxHeight="none"
        opportunities={
          Array [
            Object {
              "course_id": "1",
              "due_at": "2017-03-09T20:40:35Z",
              "html_url": "http://www.non_default_url.com",
              "id": "1",
              "name": "learning object title",
            },
          ]
        }
        timeZone="America/Denver"
        togglePopover={[Function]}
      />
    </PopoverContent>
  </Popover>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="Add To Do"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={false}
    size="small"
  >
    <CloseButton
      buttonRef={[Function]}
      margin="0"
      offset="x-small"
      onClick={[Function]}
      placement="start"
      size="small"
      variant="icon"
    >
      Close
    </CloseButton>
    <UpdateItemTray
      courses={
        Array [
          Object {
            "id": "1",
            "informStudentsOfOverdueSubmissions": true,
            "longName": "Course Long Name",
            "shortName": "Course Short Name",
          },
        ]
      }
      locale="en"
      onDeletePlannerItem={[Function]}
      onSavePlannerItem={[Function]}
      timeZone="America/Denver"
    />
  </Tray>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="My Grades"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={true}
    size="small"
  >
    <View
      as="div"
      display="auto"
      padding="large large medium"
    >
      <CloseButton
        buttonRef={[Function]}
        margin="0"
        offset="x-small"
        onClick={[Function]}
        placement="start"
        size="small"
        variant="icon"
      >
        Close
      </CloseButton>
      <GradesDisplay
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        loading={false}
      />
    </View>
  </Tray>
  <Portal
    insertAt="bottom"
    mountNode={<div />}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
  >
    <StickyButton
      buttonRef={[Function]}
      className="StickyButton-styles__newActivityButton"
      description="Scrolls up to the previous item with new activity."
      direction="up"
      id="new_activity_button"
      offset="0"
      onClick={[Function]}
      zIndex={3}
    >
      New Activity
    </StickyButton>
  </Portal>
</div>
`;

exports[`new activity button shows when there is new activity 1`] = `
<div>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    id="planner-today-btn"
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="light"
  >
    Today
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Add To Do
    </ScreenReaderContent>
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Show My Grades
    </ScreenReaderContent>
  </Button>
  <Popover
    alignArrow={false}
    constrain="none"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on="click"
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom end"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    show={false}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Button
        as="button"
        buttonRef={[Function]}
        fluidWidth={false}
        margin="0 medium 0 0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="icon"
      >
        <Badge
          count={1}
          elementRef={[Function]}
          formatOverflowText={[Function]}
          placement="top end"
          pulse={false}
          standalone={false}
          type="count"
          variant="primary"
        >
          <View
            display="auto"
          >
            <IconAlerts />
            <ScreenReaderContent
              as="span"
            >
              1 opportunity
            </ScreenReaderContent>
          </View>
        </Badge>
      </Button>
    </PopoverTrigger>
    <PopoverContent>
      <Animatable(Opportunities)
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        dismiss={[Function]}
        maxHeight="none"
        opportunities={
          Array [
            Object {
              "course_id": "1",
              "due_at": "2017-03-09T20:40:35Z",
              "html_url": "http://www.non_default_url.com",
              "id": "1",
              "name": "learning object title",
            },
          ]
        }
        timeZone="America/Denver"
        togglePopover={[Function]}
      />
    </PopoverContent>
  </Popover>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="Add To Do"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={false}
    size="small"
  >
    <CloseButton
      buttonRef={[Function]}
      margin="0"
      offset="x-small"
      onClick={[Function]}
      placement="start"
      size="small"
      variant="icon"
    >
      Close
    </CloseButton>
    <UpdateItemTray
      courses={
        Array [
          Object {
            "id": "1",
            "informStudentsOfOverdueSubmissions": true,
            "longName": "Course Long Name",
            "shortName": "Course Short Name",
          },
        ]
      }
      locale="en"
      onDeletePlannerItem={[Function]}
      onSavePlannerItem={[Function]}
      timeZone="America/Denver"
    />
  </Tray>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="My Grades"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={true}
    size="small"
  >
    <View
      as="div"
      display="auto"
      padding="large large medium"
    >
      <CloseButton
        buttonRef={[Function]}
        margin="0"
        offset="x-small"
        onClick={[Function]}
        placement="start"
        size="small"
        variant="icon"
      >
        Close
      </CloseButton>
      <GradesDisplay
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        loading={false}
      />
    </View>
  </Tray>
  <Portal
    insertAt="bottom"
    mountNode={<div />}
    onClose={[Function]}
    onOpen={[Function]}
    open={true}
  >
    <StickyButton
      buttonRef={[Function]}
      className="StickyButton-styles__newActivityButton"
      description="Scrolls up to the previous item with new activity."
      direction="up"
      id="new_activity_button"
      offset="0"
      onClick={[Function]}
      zIndex={3}
    >
      New Activity
    </StickyButton>
  </Portal>
</div>
`;

exports[`renders the base component correctly with buttons and trays 1`] = `
<div>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    id="planner-today-btn"
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="light"
  >
    Today
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Add To Do
    </ScreenReaderContent>
  </Button>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    icon={[Function]}
    margin="0 medium 0 0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="icon"
  >
    <ScreenReaderContent
      as="span"
    >
      Show My Grades
    </ScreenReaderContent>
  </Button>
  <Popover
    alignArrow={false}
    constrain="none"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on="click"
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom end"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    show={false}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Button
        as="button"
        buttonRef={[Function]}
        fluidWidth={false}
        margin="0 medium 0 0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="icon"
      >
        <Badge
          count={1}
          elementRef={[Function]}
          formatOverflowText={[Function]}
          placement="top end"
          pulse={false}
          standalone={false}
          type="count"
          variant="primary"
        >
          <View
            display="auto"
          >
            <IconAlerts />
            <ScreenReaderContent
              as="span"
            >
              1 opportunity
            </ScreenReaderContent>
          </View>
        </Badge>
      </Button>
    </PopoverTrigger>
    <PopoverContent>
      <Animatable(Opportunities)
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        dismiss={[Function]}
        maxHeight="none"
        opportunities={
          Array [
            Object {
              "course_id": "1",
              "due_at": "2017-03-09T20:40:35Z",
              "html_url": "http://www.non_default_url.com",
              "id": "1",
              "name": "learning object title",
            },
          ]
        }
        timeZone="America/Denver"
        togglePopover={[Function]}
      />
    </PopoverContent>
  </Popover>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="Add To Do"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={false}
    size="small"
  >
    <CloseButton
      buttonRef={[Function]}
      margin="0"
      offset="x-small"
      onClick={[Function]}
      placement="start"
      size="small"
      variant="icon"
    >
      Close
    </CloseButton>
    <UpdateItemTray
      courses={
        Array [
          Object {
            "id": "1",
            "informStudentsOfOverdueSubmissions": true,
            "longName": "Course Long Name",
            "shortName": "Course Short Name",
          },
        ]
      }
      locale="en"
      onDeletePlannerItem={[Function]}
      onSavePlannerItem={[Function]}
      timeZone="America/Denver"
    />
  </Tray>
  <Tray
    border={false}
    contentRef={[Function]}
    defaultFocusElement={null}
    insertAt="bottom"
    label="My Grades"
    liveRegion={null}
    mountNode={null}
    onClose={[Function]}
    onDismiss={[Function]}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    onOpen={[Function]}
    open={false}
    placement="end"
    shadow={true}
    shouldCloseOnDocumentClick={false}
    shouldContainFocus={true}
    shouldReturnFocus={true}
    size="small"
  >
    <View
      as="div"
      display="auto"
      padding="large large medium"
    >
      <CloseButton
        buttonRef={[Function]}
        margin="0"
        offset="x-small"
        onClick={[Function]}
        placement="start"
        size="small"
        variant="icon"
      >
        Close
      </CloseButton>
      <GradesDisplay
        courses={
          Array [
            Object {
              "id": "1",
              "informStudentsOfOverdueSubmissions": true,
              "longName": "Course Long Name",
              "shortName": "Course Short Name",
            },
          ]
        }
        loading={false}
      />
    </View>
  </Tray>
  <Portal
    insertAt="bottom"
    mountNode={<div />}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
  >
    <StickyButton
      buttonRef={[Function]}
      className="StickyButton-styles__newActivityButton"
      description="Scrolls up to the previous item with new activity."
      direction="up"
      id="new_activity_button"
      offset="0"
      onClick={[Function]}
      zIndex={3}
    >
      New Activity
    </StickyButton>
  </Portal>
</div>
`;
